
cruisecontrol.sh:
----------------------
* Execute java from JAVA_HOME. Patch by Martin Jaeger.

CVS:
----------------------
* Add module attribute so it can work with no local working copy (CC-149). Patch by Lars Gehrken
* Updated documentation and class comments to correctly reflect the required attributes after the module change (CC-207). Patch by Mark Doliner

CVSBootstrapper:
----------------------
* Add overwriteChanges attribute.

DefaultLabelIncrementer:
----------------------
* Fixed bug when using non-default label separator (CC-155). Patch by Jerome Lacoste

documentation:
----------------------
* Spelling corrections. Patch by Larry Shatzer.

EmailPublisher:
----------------------
* Now accepts <alert> elements to notify users of modifications in files matching a regexp (CC-120). Patch by Eric Spiegelberg

FTPPublisher:
----------------------
* Made setDeleteArtifacts take a boolean argument, instead of parsing a String as a boolean, for consistency with other plugins (CC-158).
  This means that you MUST use "true" or "false" now in your config file for deleteArtifacts-attribute, and not "yes" or "no"!

HTMLEmailPublisher:
----------------------
* Now tries to determine the locations for xslDir and css automatically when they're not specified

index.jsp:
----------------------
* Use rounded corners on the right of the page (CC-113). Patch by Mark Doliner
* Add summary line with percentage of passing/failing projects (CC-203). Patch by Tim Shadel

JMX:
----------------------
* Add ability to require username/password for JMX interface (CC-128). Patch by Glenn Brown
* Upgraded to MX4J 3.0.1

JMX Support:
----------------------
* Expose Project's BuildStartTime as JMX attribute (CC-92). Patch by Jerome Lacoste

Macker:
----------------------
* Add support for Macker in HTMLEmailPublisher and reporting/JSP app. Patch by Andrew Sadler

OnSuccessPublisher:
----------------------